# ibmi-mcp

./: .bobmodes  .env.example  .gitattributes  .gitignore  .mcp.json  .prettierignore  AGENTS.md  CLAUDE.md  DEVELOPER.md  Dockerfile  README.md  agent.md  docker-compose.yml  get-access-token.js  opencode.json  package-lock.json  package.json  response_format.md  smithery.yaml  sql_tools_sequence.md  template_mcp.json  typedoc.json
.bob/rules-ibmi-mcp-tool-builder/: instructions.md
.clinerules/: clinerules.md
.github/workflows/: upstream-merge.yml
.specify/memory/: constitution.md
agents/: .mcp.json  README.md  eval_runner.py  ibmi_agentos.py  pyproject.toml  test_watsonx.py
agents/frameworks/: README.md
agents/frameworks/langchain/src/ibmi_agents/agents/: __init__.py  ibmi_agents.py  pyproject.toml  test_agents.py
apps/: README.md
apps/docker/: .dockerignore  README.md
apps/mcpgateway/: docker-compose.yml
docs/: Basic-Http-Auth-Summary.md  README.md  best-practices.md  configuration.mdx  docs.json  index.mdx  installation.mdx  quickstart.mdx  setup-mapepire.mdx  tree.md
docs/agents/: building-agents.mdx
docs/concepts/: architecture.mdx  mcp-overview.mdx
docs/examples/: first-tool.mdx  performance.mdx  system-administration.mdx  (+2 more)
n8n/: .env.example  .gitignore  README.md  docker-compose.yml  start-dev.sh  stop-dev.sh
prebuiltconfigs/: performance.yaml  security.yaml  sys-admin.yaml
scripts/: generate-json-schemas.ts  validate-config.ts
server/: .env.example  README.md  package.json
src/: index.ts
tests/agents/: README.md  agent.py  agent_cli.py  agno_agent.py  airbnb.py  pyproject.toml  test_tool_annotations.py  test_toolset_resources.py  utils.py
tools/: README.md
(+173 files in other folders)
